# jammies

./: .gitignore  README.md  project.py  pyproject.toml
old/: metadata.py  patcher.py
src/jammies/workspace/: project.py
src/prjman/: cli.py  config.py  lazy.py  log.py  metadata.py  module.py  registrar.py  singleton.py  utils.py
src/prjman/config/: base.py
src/prjman/defn/: builder.py  file.py  metadata.py  registrar.py
src/prjman/internal/: scripts.py
src/prjman/internal/file/: gitrepo.py  osf.py  url.py
src/prjman/internal/file/delegate/: gitrepo.py
src/prjman/internal/postprocessor/: notebook.py  unpack.py
src/prjman/meta/: file.py
src/prjman/meta/files/: gitrepo.py  osf.py  url.py
src/prjman/metadata/: base.py  file.py
src/prjman/metadata/files/: gitrepo.py  osf.py  url.py
src/prjman/workspace/: patcher.py  project.py
src/project_patcher/: cli.py  main.py  singleton.py  utils.py
src/project_patcher/integration/: i_requests.py
src/project_patcher/metadata/: base.py  file.py
src/project_patcher/metadata/files/: git.py  gitrepo.py  osf.py  url.py
src/project_patcher/struct/: codec.py  registry.py
src/project_patcher/workspace/: patcher.py  project.py
