[build-system]
requires = [
    "setuptools>=61.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "project_patcher"
version = "0.1.0.dev5"
authors = [
    { name = "Aaron Haim", email = "ahaim@wpi.edu" }
]
description = "A project constructor, diff generator, and patcher rolled into one"
requires-python = ">=3.7"
dependencies = [
    "requests>=2.28",
    "click>=8.1"
]

[project.optional-dependencies]
git = ["GitPython>=3.1"]

[tools.setuptools.packages.find]
where = ["src"]

[project.scripts]
project_patcher = "project_patcher.cli:main"
