[build-system]
requires = [
    "setuptools>=61.0",
    "pip>=22.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "prjman"
version = "0.4.0.dev1"
authors = [
    { name = "Aaron Haim", email = "ahaim@ashwork.net" }
]
description = "A helper for constructing, managing, and patching projects"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
    "requests>=2.28",
    "click>=8.1"
]

[project.urls]
homepage = "https://github.com/ahaim5357/project-patcher"
issue_tracker = "https://github.com/ahaim5357/project-patcher/issues"

[project.optional-dependencies]
git = ["GitPython>=3.1"]
all = ["prjman[git]"]

[tools.setuptools.packages.find]
where = ["src"]

[project.scripts]
prjman = "prjman.cli:main"
